--- a/css/recommendation.css
+++ b/css/recommendation.css
@@ -1,3 +1,7 @@
+#recommendation {
+  overflow: hidden;
+}
+
 #recommendation p {
   margin: 0px auto 40px auto;
 }
